--- a/Inheritance/Academy/Academy.csproj
+++ b/Inheritance/Academy/Academy.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AcademyMember.cs" />
+    <Compile Include="Factory.cs" />
     <Compile Include="Graduate.cs" />
     <Compile Include="Human.cs" />
     <Compile Include="Program.cs" />
