--- a/Inheritance/Geometry/Geometry.csproj
+++ b/Inheritance/Geometry/Geometry.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{60D6FC8B-5829-4D0B-866C-312D819BAEBC}</ProjectGuid>
+    <ProjectGuid>{81235F7D-8319-4D68-B3FA-F6F22A93135C}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>AbstractBasseClass</RootNamespace>
-    <AssemblyName>AbstractBasseClass</AssemblyName>
+    <RootNamespace>Geometry</RootNamespace>
+    <AssemblyName>Geometry</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -35,6 +35,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,28 +45,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AirVehicle\AirVehicle.cs" />
-    <Compile Include="GraundVehicle\Bike.cs" />
-    <Compile Include="GraundVehicle\Car.cs" />
-    <Compile Include="GraundVehicle\GroundVehicle.cs" />
-    <Compile Include="AirVehicle\Helicopter.cs" />
-    <Compile Include="GraundVehicle\OnRail.cs" />
-    <Compile Include="GraundVehicle\ONRoad.cs" />
-    <Compile Include="AirVehicle\plane.cs" />
+    <Compile Include="FIgura\square.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WaterVehicle\Ship.cs" />
-    <Compile Include="WaterVehicle\speedboat.cs" />
-    <Compile Include="WaterVehicle\submarine.cs" />
-    <Compile Include="AirVehicle\tiltrotor.cs" />
-    <Compile Include="GraundVehicle\Train.cs" />
-    <Compile Include="GraundVehicle\Tramvai.cs" />
-    <Compile Include="Vehicle.cs" />
-    <Compile Include="WaterVehicle\WaterVehicle.cs" />
+    <Compile Include="Shape.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
